syntax = "proto3";

package jobs;

service JobService {
  rpc Acknowledge(AcknowledgeRequest) returns (AcknowledgeResponse) {}
}

message AcknowledgeRequest {
  int32 jobId = 1;
}

message AcknowledgeResponse {}
